# hogpp

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  codecov.yml  gcovr.cfg  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_lint.txt  tox.ini
.ci/docker/: bookworm.Dockerfile  debian.Dockerfile  lint.Dockerfile  python3.x.Dockerfile
.github/workflows/: benchmark.yml  linux.yml  macos.yml  wheels.yml  windows.yml
cmake/: AddISA.cmake  FindSphinx.cmake  GenerateVersion.cmake  TestDispatch.cmake
docs/: bibliography.rst  build.rst  conf.py  differences.rst  index.rst  inria.rst  license.rst  quickstart.rst  references.bib  requirements.txt  usage.rst
include/hogpp/: assume.hpp  axis.hpp  bounds.hpp  cartesianproduct.hpp  conditionalborder.hpp  constants.hpp  gradient.hpp  gradientmagnitude.hpp  gradientsqrtmagnitude.hpp  gradientsquaremagnitude.hpp  integralhistogram.hpp  integralhogdescriptor.hpp  l1hys.hpp  l1norm.hpp  l1sqrt.hpp  l2hys.hpp  l2norm.hpp  midpoint.hpp  normalize.hpp  normtraits.hpp  precision.hpp  prefix.hpp  promote.hpp  repeatborder.hpp  signedgradient.hpp  suffix.hpp  unsignedgradient.hpp
python/: binning.cpp  binning.hpp  blocknormalizer.cpp  blocknormalizer.hpp  cat.hpp  cpufeature.cpp  cpufeature.hpp  cpufeatures.cpp  cpufeatures.hpp  dispatchinit.cpp  formatter.hpp  hogpp.cpp  hogpp.hpp  init.cpp  integralhogdescriptor.cpp  integralhogdescriptor.hpp  isa.hpp  isa.hpp.cmake.in  isaconfig.hpp.cmake.in  levenshtein.hpp  magnitude.cpp  magnitude.hpp  module.cpp  module.hpp  moduledispatch.cpp  moduledispatch.hpp  moduleinitializer.cpp  moduleinitializer.hpp  requirements.txt  type_caster_test.cpp  typetraits.hpp
python/hogpp/: __init__.py
python/type_caster/: array2i.hpp  bounds.cpp  bounds.hpp  cartesianproduct.hpp  opencv.cpp  opencv.hpp  stride.hpp  tensor.hpp  typesequence.hpp
scripts/: build-and-deploy.sh  normalize-bib.sh
tests/cmake/: test_arm32_neon_dispatch.cmake
tests/cpp/: test_binning.cpp  test_block_norm.cpp  test_cartesian_product.cpp  test_descriptor.cpp  test_gradient.cpp  test_integral_histogram.cpp  test_levenshtein.cpp
tests/python/: test_hogpp.py  test_opencv_type_caster.py  test_repr.py  test_tensor_type_caster.py
tests/python/internal/: test_opencv_type_caster.py  test_tensor_type_caster.py
tests/python/module/: _dispatch_isas.py  benchmark_isas.py  perf_dispatch.py  test_dispatch.py  test_hogpp.py  test_repr.py
workflow/: Snakefile
